Website Updated version 0.02

--- a/index.html
+++ b/index.html
@@ -9,26 +9,40 @@
 <body>
 
     <header class="header">
-        <a href="#" class="logo">Logo</a>
+        <a href="#" class="logo">ASAF</a>
 
         <nav class="navbar">
             <a href="#homepage">Home</a>
             <a href="#aboutpage">About</a>
+            <a href="#skillspage">Skills</a>
             <a href="#portfoliopage">Portfolio</a>
             <a href="#contactpage">Contact</a>
         </nav>
     </header>
 
     <section id="homepage" class="home">
-        <h2 class="all-heading">Home Page</h2>
+       <div class="home-content">
+            <h3>Hi , I'm Asaf</h3>
+            <p>Frontend Developer & Computer Programming Student</p>
+            <p>I am a motivated and ambitious Computer Programming student, passionate about building modern and responsive web applications.</p>
+            <p>I am constantly learning and improving my skills, enjoying tackling challenging problems, and committed to delivering high-quality results.</p>
+            <p>With curiosity and a strong work ethic, I aim to turn ideas into functional and visually appealing digital experiences.</p>
+            <p>Welcome to my portfolio – take a look at my projects and see what I can create!</p>ayr
+       </div>   
+        
     </section>
 
     <section id="aboutpage" class="about">
         <div class="about-content">
             <img src="Images/bg_dark01.jpg" class="profil-pic" alt="Profile Photo">
+            <p id="aboutme">About Me</p>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, accusantium obcaecati. Non dolorum sed quasi velit est quibusdam, dignissimos possimus hic quis, similique officiis odit fugit veritatis eveniet nemo dolore?
             </p>
+    </section>
+
+    <section id="skillspage" class="skills">
+        <h2 class="all-heading">Skills Page</h2>
     </section>
 
     <section id="portfoliopage" class="portfolio">
