--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <section id="homepage" class="home">
        <div class="home-content">
             <h3>Hi , I'm Asaf</h3>
-            <p>Frontend Developer & Computer Programming Student</p>
-            <p>I am a motivated and ambitious Computer Programming student, passionate about building modern and responsive web applications.</p>
-            <p>I am constantly learning and improving my skills, enjoying tackling challenging problems, and committed to delivering high-quality results.</p>
-            <p>With curiosity and a strong work ethic, I aim to turn ideas into functional and visually appealing digital experiences.</p>
-            <p>Welcome to my portfolio – take a look at my projects and see what I can create!</p>ayr
+                <p>Frontend Developer & Computer Programming Student</p>
+                <p>I am a motivated and ambitious Computer Programming student, passionate about building modern and responsive web applications.</p>
+                <p>I am constantly learning and improving my skills, enjoying tackling challenging problems, and committed to delivering high-quality results.</p>
+                <p>With curiosity and a strong work ethic, I aim to turn ideas into functional and visually appealing digital experiences.</p>
+                <p>Welcome to my portfolio – take a look at my projects and see what I can create!</p>
        </div>   
         
     </section>
@@ -35,7 +35,7 @@
     <section id="aboutpage" class="about">
         <div class="about-content">
             <img src="Images/bg_dark01.jpg" class="profil-pic" alt="Profile Photo">
-            <p id="aboutme">About Me</p>
+            <h6>About Me</h6>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, accusantium obcaecati. Non dolorum sed quasi velit est quibusdam, dignissimos possimus hic quis, similique officiis odit fugit veritatis eveniet nemo dolore?
             </p>
